--- a/Calculator.html
+++ b/Calculator.html
@@ -12,7 +12,7 @@
   </head>
   <body>
       <div class="w-5/12 p-5 output text-center mx-auto hidden">
-           <img src="assets/logo.png" alt="logo" class="h-16 mx-auto">
+           <img src="logo.png" alt="logo" class="h-16 mx-auto">
            <div class="disp">
                <i class="fa fa-times fa-2x ml-auto" id="cancel"></i>
                 <div>
